# claude-ai-poc

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  FinancialDesign.MD  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
finsight/: orchestrator.py
finsight/advisory/: advisor.py  portfolio_advisor.py  prompt_builder.py
finsight/analyzers/: fundamental_analyzer.py  macro_analyzer.py  mf_analyzer.py  sentiment_analyzer.py  technical_analyzer.py
finsight/fetchers/: amfi_fetcher.py  base_fetcher.py  macro_fetcher.py  news_fetcher.py  nse_fetcher.py  yfinance_fetcher.py
finsight/models/: mutual_fund.py  report.py  stock.py
finsight/reports/: html_generator.py  pdf_generator.py
finsight/reports/templates/: mf_report.html  stock_report.html
finsight/storage/: cache.py  db.py
finsight/utils/: helpers.py  logger.py  rate_limiter.py
tests/: conftest.py  test_utils.py
tests/test_analyzers/: test_fundamental.py  test_mf_analyzer.py  test_technical.py
tests/test_fetchers/: test_amfi_fetcher.py  test_yfinance_fetcher.py
