[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "finsight"
version = "0.1.0"
description = "Long-term investment analysis platform for Indian equities and mutual funds"
requires-python = ">=3.11"
readme = "FinancialDesign.MD"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that hit real external APIs (deselect with '-m not integration')",
]

[tool.setuptools.packages.find]
include = ["finsight*"]
